--- a/foodyapp/templates/restaurant/sign_up.html
+++ b/foodyapp/templates/restaurant/sign_up.html
@@ -1,26 +1,15 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home Page</title>
+{% extends 'base_signup.html' %}
+{% load bootstrap3 %}
 
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% block title %}Sign In{% endblock %}
+{% block heading %}Restaurant - Sign In{% endblock %}
 
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
-<body>
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ user_form }}
-    {{ restaurant_form }}
-    <button type="sumbit"> Sign Up</button>
-  </form>
-
-
-
-</body>
-</html>
+{% block content %}
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      {% bootstrap_form user_form %}
+      {% bootstrap_form restaurant_form %}
+      <button type="sumbit" class= "btn btn-pink pull-right" > Sign Up</button>
+    </form>
+    <a href="{% url 'restaurant-sign-in' %}">Already have a account?</a>
+{% endblock %}
