--- a/foodyapp/templates/base.html
+++ b/foodyapp/templates/base.html
@@ -12,6 +12,8 @@
 
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+{% block script %}{% endblock %}
 </head>
 <body>
 
