--- a/foodyapp/templates/restaurant/order.html
+++ b/foodyapp/templates/restaurant/order.html
@@ -5,6 +5,7 @@
   <div class="panel-heading bg-blue">
     <h4 class="panel-title text-center text-white">Orders</h4>
   </div>
+  <div class="panel-body">
       <br/>
     <table class="table table-bordered table-hover table-striped">
       <thead>
@@ -15,25 +16,34 @@
           <th>Driver</th>
           <th>Total</th>
           <th>Status</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
           {% for order in orders %}
-          <tr>
-            <td scope="row">{{ order.id }}</td>
-            <td>
-              {% for od in order.order_details %}
-                  {{ od.meal.name }} {{ od.meal.price }}
-                  x {{ od.meal.quantity}} = ${{od.meal.sub_total }}
-              {% endfor %}
-            </td>
-            <td>{{ order.customer }}</td>
-            <td>{{ order.driver }}</td>
-            <td>{{ order.total }}</td>
-            <td>{{ order.status }}</td>
+              <tr>
+                  <td scope="row">{{ order.id }}</td>
+                  <td>
+                    {% for od in order.order_details.all %}
+                        {{ od.meal.name }} {{ od.meal.price }}
+                        x {{ od.quantity }} = ${{ od.sub_total }}
+                    {% endfor %}
+                  </td>
+                  <td>{{ order.customer }}</td>
+                  <td>{{ order.driver }}</td>
+                  <td>{{ order.total }}</td>
+                  <td>{{ order.get_status_display }}</td>
+                  <td>
+                      {% if order.status == 1 %}
+                      <form method="POST">
+                        {% csrf_token %}
+                        <input name="id" value="{{ order.id }}" hidden>
+                        <button class="btn btn-success">Ready</button>
+                      </form>
+                      {% endif %}
+                  </td>
 
-          </tr>
-
+               </tr>
           {% endfor %}
       </tbody>
     </table>
